jilles      2007/05/07 16:42:10 UTC	(20070507-8237)
  Log:
  Add /memoserv read new which reads upto 5 unread memos.
  

  Changes:	Modified:
  +3 -3		trunk/help/memoserv/read (File Modified) 
  +22 -11	trunk/modules/memoserv/read.c (File Modified) 


jilles      2007/05/06 22:54:53 UTC	(20070506-8235)
  Log:
  Remove UF_NICK_WARNED.
  

  Changes:	Modified:
  +0 -1		trunk/include/users.h (File Modified) 


jilles      2007/05/06 22:47:38 UTC	(20070506-8233)
  Log:
  nickserv enforce: remove effectively dead code
  

  Changes:	Modified:
  +0 -12	trunk/modules/nickserv/enforce.c (File Modified) 


jilles      2007/05/06 22:31:50 UTC	(20070506-8231)
  Log:
  Rework nickserv enforcement:
  - stop checking all online nicks to see whether they are
    authorized to use that nick every 30 seconds
  - instead, check after user introductions and nick changes,
    just after sending "please identify"; at that point
    store the (nick, host) pair and if after 30 seconds that
    nick is still online from that host and not authorized
    to use that nick, force a nick change and introduce an
    enforcer (holdnick_sts())
  - this means LOGOUT, ACCESS DEL do not cause ENFORCE to
    act anymore, the latter should probably be fixed
  - FREEZE-ENFORCE interaction is wrong anyway
  - the UF_NICK_WARNED flag is no longer used
  

  Changes:	Modified:
  +1 -0		trunk/doc/HOOKS (File Modified) 
  +5 -0		trunk/include/account.h (File Modified) 
  +145 -71	trunk/modules/nickserv/enforce.c (File Modified) 
  +4 -0		trunk/src/services.c (File Modified) 


jilles      2007/05/06 13:14:45 UTC	(20070506-8229)
  Log:
  nickserv enforce: rip out #if 0'ed code for non-svshold
  enforcers, this doesn't work and would cause too much
  problems
  

  Changes:	Modified:
  +0 -46	trunk/modules/nickserv/enforce.c (File Modified) 


jilles      2007/05/05 15:19:38 UTC	(20070505-8227)
  Log:
  channel_delete(): add a soft_assert that if there are
  still members in the channel, they are services and